# arranjador

./: .gitignore  pyproject.toml
arranjador/: bin_study.py  main.py
